# pvBezier

./: CMakeLists.txt  LICENSE  README.md  examples.hpp  main.cpp  matrix_addons.hpp
pvBezier/: CMakeLists.txt
pvBezier/include/pvBezier/: bernstein_basis.hpp  bezier_acceleration.hpp  bezier_cross_quad.hpp  bezier_curve.hpp  bezier_curve_fwd.hpp  bezier_surface.hpp  bezier_surface_fwd.hpp  bezier_surface_root_finding.hpp  bezier_volume.hpp  bezier_volume_fwd.hpp  binomial_coefficient.hpp  binomial_table.hpp  catmull_rom_interpolant.hpp  eclipping_strategy.hpp  implicit_line.hpp  partial_t.hpp  partial_uv.hpp  partial_uvw.hpp  plane3d.hpp  safe_pow.hpp
pvBezier/src/: bernstein_basis.cpp
